--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.nav-btn{
+    background-color: transparent;
+    border: transparent;
+    box-shadow: none;
+}
 .active{
-    background-color: #f7bf59bb;
+    background-color: #804818;
+    color: #ffd2aa;
 }
